<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Main Activity -->
    <string name="app_name">Pool Game Scorer</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_af">Average Finish</string>
    <string name="title_activity_endless_pool">Endless Pool</string>
    <string name="title_activity_bowlliards">Bowlliards</string>
    <string name="main_af_optimal_number">perfect for 3–8 players</string>
    <string name="main_endless_optimal_number">perfect for 2–4 players</string>
    <string name="main_bowl_optimal_number">perfect for 1–3 players</string>
    <string name="card_image_desc">Game Icon</string>

    <!-- AF Activity -->
    <string name="af_new_game">New Game</string>
    <string name="af_round_count">After 0</string>
    <string name="af_add_round">Add Round</string>
    <string name="af_position">Pos</string>
    <string name="af_name">Name</string>
    <string name="af_new">New</string>
    <string name="af_af">AF</string>
    <string name="af_choose_num">Choose Number Of Players: </string>
    <string name="af_start">Start</string>
    <string name="af_back">Back</string>
    <string name="af_enter_names">Enter Player Names: </string>
    <string name="action_settings">Settings</string>
    <string name="valid">valid</string>

    <!-- Endless Pool Activity -->
    <!-- Bowlliards Activity -->
    <string name="coming_soon">Coming Soon</string>

</resources>