<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:poolgamescorer="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wood_background" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:layout_marginLeft="28dp"
        android:layout_marginStart="28dp"
        android:layout_marginRight="28dp"
        android:layout_marginEnd="28dp"
        android:orientation="vertical">
        <noah.poolgamescorer.main.MainMenuCard
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:onClick="startEndlessPool"
            poolgamescorer:cardBackgroundColor="#AA004000"
            poolgamescorer:imageViewSrc="@drawable/eight_ball"
            poolgamescorer:nameText="@string/title_activity_endless_pool"
            poolgamescorer:optimalText="@string/main_endless_optimal_number"/>
        <noah.poolgamescorer.main.MainMenuCard
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:onClick="startAverageFinish"
            poolgamescorer:cardBackgroundColor="#AA004000"
            poolgamescorer:imageViewSrc="@drawable/af_icon"
            poolgamescorer:nameText="@string/title_activity_af"
            poolgamescorer:optimalText="@string/main_af_optimal_number"/>
        <noah.poolgamescorer.main.MainMenuCard
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:onClick="startBowlliards"
            poolgamescorer:cardBackgroundColor="#AA004000"
            poolgamescorer:imageViewSrc="@drawable/bowling_pins"
            poolgamescorer:nameText="@string/title_activity_bowlliards"
            poolgamescorer:optimalText="@string/main_bowl_optimal_number"/>
    </LinearLayout>
</ScrollView>